--- a/kmc.html
+++ b/kmc.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-		<title>three.js webgl - geometry - catmull spline editor</title>
+		<title>Kinetic Monte Carlo on Honeycomb Lattice</title>
+        <!-- License GPL v3.0
+        Copyright (c) 2024, 2025
+        Author: Yunlong Lian
+        -->
+
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
 		<link type="text/css" rel="stylesheet" href="main.css">
