--- a/skyrmion.html
+++ b/skyrmion.html
@@ -2,6 +2,10 @@
 <html>
 <head>
     <title>Magnetic System Dynamics</title>
+    <!-- License GPL v3.0
+    Copyright (c) 2024, 2025
+    Author: Yunlong Lian
+    -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <style>
         body { margin: 0; }
