--- a/wire.html
+++ b/wire.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Minimizing Wire Interaction (using Three.js)</title>
+    <title>Optimizing wire configuration using simulated annealing</title>
     <!-- License GPL v3.0
     Copyright (c) 2024, 2025
     Author: Yunlong Lian
