--- a/index.html
+++ b/index.html
@@ -157,6 +157,13 @@
                         </div>
                     </a>
 
+                    <a href="ascend.html" style="text-decoration: none; color: rgb(168, 152, 224);">
+                        <div class="box">
+                            <h2>Kick starter for operator development on Huawei Ascend(昇腾) processor</h2>
+                            <p>In progress...</p>
+                        </div>
+                    </a>
+                
                     <a style="text-decoration: none; color: lightgrey;">
                         <div class="box">
                             <h2>More topics are coming soon ...</h2>
