--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
 <body>
     <div class="container">
         <div class="content">
-
             <a style="text-decoration: none; color: inherit;">
                 <div class="box">
                     <a style="text-decoration: none; color: white;">
@@ -57,6 +56,12 @@
                                 researcher and developer for about a year. I have been studying and working in 
                                 many places around the world and I am actively seeking for job opportunities in 
                                 North America, Europe and Australia. </p>
+                        </div>
+                    </a>
+                    <a href="https://github.com/algorithmx/" style="text-decoration: none; color: rgb(141, 239, 223);">
+                        <div class="box">
+                            <h2>GitHub</h2>
+                            <p>github.com/algorithmx</p>
                         </div>
                     </a>
                     <a href="mailto:yunlong.lian@proton.me" style="text-decoration: none; color: lightgreen;">
