--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
                                 North America, Europe and Australia. </p>
                         </div>
                     </a>
+                    <a href="publications.html" style="text-decoration: none; color: rgb(139, 167, 249);">
+                        <div class="box">
+                            <h2>Publications</h2>
+                            <p>Click for details.</p>
+                        </div>
+                    </a>
                     <a href="https://github.com/algorithmx/" style="text-decoration: none; color: rgb(141, 239, 223);">
                         <div class="box">
                             <h2>GitHub</h2>
