--- a/index.html
+++ b/index.html
@@ -81,6 +81,24 @@
 
             <a style="text-decoration: none; color: inherit;">
                 <div class="box">
+                    <h1>Active Projects</h1>
+                    <p>Here is a list of projects I am currently working on.</p>
+                    <a href="https://github.com/algorithmx/SimulationWorkbench" style="text-decoration: none; color: rgb(187, 255, 0);">
+                        <div class="box">
+                            <h2>Simulation workbench.</h2>
+                            <p>A typical simulation project can be modelled as a chain of steps, where each step is
+                                a call to a particular simulation tool. Usually the project contains many simulations 
+                                with different parameter configurations. 
+                            </p>
+                            <p>I have been using Sentaurus Workbench (SWB) for TCAD simulations. I found that the workflow managed 
+                                by the SWB is convenient in some sense but cumbersome in many situations. So I want to develop 
+                                my own tool to manage the simulation projects.
+                            </p>
+                            <p>Click for detail.</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="box">
                     <h1>Fun Projects</h1>
                     <p>Below is a list of topics or projects I have been involved or I am interested. 
                         Given my frequent engagement in simulation projects, I have cultivated a 
