--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <p>Here is a list of projects I am currently working on.</p>
                     <a href="https://github.com/algorithmx/SimulationWorkbench" style="text-decoration: none; color: rgb(187, 255, 0);">
                         <div class="box">
-                            <h3>Simulation workbench.</h3>
+                            <h3>Simulation workbench</h3>
                             <p>A typical simulation project can be modelled as a chain of steps, where each step is
                                 a call to a particular simulation tool. Usually the project contains many simulations 
                                 with different parameter configurations. 
@@ -100,8 +100,13 @@
 
                     <a href="ascend.html" style="text-decoration: none; color: rgb(168, 152, 224);">
                         <div class="box">
-                            <h3>Kick starter for operator development on Huawei Ascend(昇腾) processor</h3>
-                            <p>In progress...</p>
+                            <h3>Operator development on Huawei Ascend processor</h3>
+                            <p>There is a programming contest (now S2 closed) for operator development with Huawei Ascend (昇腾) processor.
+                                I found this contest valuable because the related training course and the starter package of contest problems 
+                                exposes enough details of the operator development workflow of Ascend processor.
+                            </p>
+                            <p>In this ongoing work, I record my effort on operator development. My goal is to reveal the general workflow in 
+                                software development with an NPU.</p>
                         </div>
                     </a>
 
