add markdown post support

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             font-family: "Noto Serif", serif;
             font-style: normal;
         }
-        .container {
+        .blog-container {
             display: flex;
             justify-content: center;
             align-items: center;
@@ -44,13 +44,13 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="blog-container">
         <div class="content">
             <a style="text-decoration: none; color: inherit;">
                 <div class="box">
                     <a style="text-decoration: none; color: white;">
                         <div class="box">
-                            <h3>About Me</h3>
+                            <h2>About Me</h2>
                             <p>I am a happy programmer, AI enthusiastic, with a PhD in condensed matter physics, 
                                 currently located in Shanghai. I was working in the semiconductor industry as a
                                 researcher and developer for about a year. I have been studying and working in 
@@ -60,19 +60,24 @@
                     </a>
                     <a href="publications.html" style="text-decoration: none; color: rgb(139, 167, 249);">
                         <div class="box">
-                            <h3>Publications</h3>
+                            <h2>Publications</h2>
                             <p>Click for details.</p>
+                        </div>
+                    </a>
+                    <a href="posts.html" style="text-decoration: none; color: rgb(185, 139, 249);">
+                        <div class="box">
+                            <h2>Blog Posts</h2>
                         </div>
                     </a>
                     <a href="https://github.com/algorithmx/" style="text-decoration: none; color: rgb(141, 239, 223);">
                         <div class="box">
-                            <h3>GitHub</h3>
+                            <h2>GitHub</h2>
                             <p>github.com/algorithmx</p>
                         </div>
                     </a>
                     <a href="mailto:yunlong.lian@proton.me" style="text-decoration: none; color: lightgreen;">
                         <div class="box">
-                            <h3>Contact</h3>
+                            <h2>Contact</h2>
                             <p>Email: yunlong.lian@proton.me</p>
                         </div>
                     </a>
