--- a/index.html
+++ b/index.html
@@ -130,6 +130,14 @@
                         access the visualization page. 
                     </p>
                     <p>You need a desktop display to view the visualization.</p>
+                    
+                    <a href="bloch.html" style="text-decoration: none; color: rgb(44, 151, 252);">
+                        <div class="box" >
+                            <h3 >Traces on Bloch Sphere.</h3>
+                            <span><p>To visualize the operator defined in</p> <a style="color: rgb(44, 151, 252);" href="https://arxiv.org/pdf/2105.02859">A Grand Unification of Quantum Algorithms [2105.02859]</a> <p style="color: rgb(44, 151, 252);">on a Bloch sphere.</p></span>
+                        </div>
+                    </a>
+
                     <a href="ion.html" style="text-decoration: none; color: cyan;">
                         <div class="box">
                             <h3>Molecular dynamics simulation of ion implantation.</h3>
