--- a/bloch.html
+++ b/bloch.html
@@ -26,7 +26,7 @@
 			<input type="range" id="qubit2" min="0" max="1" step="0.01" value="0.2">
 			<!-- Add more qubit controls as needed -->
 		</div>
-		<div id="frame" style="width: 800px; height: 600px; border: 2px solid #000; margin: auto;">
+		<div id="frame" style="width: 600px; height: 400px; border: 2px solid #000; margin: auto;">
 			<div id="container"></div>
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/mathjs@11.8.0/lib/browser/math.js"></script>
@@ -179,7 +179,7 @@
 
 			function updateVisualization(qubits) {
 				scene.remove(...scene.children.filter(child => child.type === 'Line'));
-				addLines(qubitStates);
+				addLines(qubits);
 			}
 		</script>
 	</body>
