--- a/index.html
+++ b/index.html
@@ -102,8 +102,15 @@
                             <p>Click for detail.</p>
                         </div>
                     </a>
-
-                    <a href="ascend.html" style="text-decoration: none; color: rgb(168, 152, 224);">
+                    <a href="https://algorithmx.github.io/PythonConsole/index.html" style="text-decoration: none; color: rgb(187, 255, 0);">
+                        <div class="box">
+                            <h3>Python console</h3>
+                            <p>A simple Python console running entirely within the browser.
+                            </p>
+                            <p>Click for detail.</p>
+                        </div>
+                    </a>
+                    <!-- <a href="ascend.html" style="text-decoration: none; color: rgb(168, 152, 224);">
                         <div class="box">
                             <h3>Operator development on Huawei Ascend processor</h3>
                             <p>There is a programming contest (now S2 closed) for operator development with Huawei Ascend (昇腾) processor.
@@ -113,7 +120,7 @@
                             <p>In this ongoing work, I record my effort on operator development. My goal is to reveal the general workflow in 
                                 software development with an NPU.</p>
                         </div>
-                    </a>
+                    </a> -->
 
                 </div>
                 <div class="box">
