--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                             <p>Click for detail.</p>
                         </div>
                     </a>
-                    <a href="https://algorithmx.github.io/PythonConsole/index.html" style="text-decoration: none; color: rgb(187, 255, 0);">
+                    <a href="https://algorithmx.github.io/PythonConsole.html" style="text-decoration: none; color: rgb(187, 255, 0);">
                         <div class="box">
                             <h3>Python console</h3>
                             <p>A simple Python console running entirely within the browser.
