--- a/index.html
+++ b/index.html
@@ -88,6 +88,19 @@
                 <div class="box">
                     <h1>Active Projects</h1>
                     <p>Here is a list of projects I am currently working on.</p>
+
+                    <a href="PythonConsole.html" 
+                        style="text-decoration: none; color: rgb(0, 255, 98);">
+                        <div class="box">
+                            <h3>Python console</h3>
+                            <p>A simple Python console running entirely within the browser. 
+                                When loaded, it can run offline. 
+                                Developed in Typescript with React.
+                            </p>
+                            <p>Click to run.</p>
+                        </div>
+                    </a>
+
                     <a href="https://github.com/algorithmx/SimulationWorkbench" style="text-decoration: none; color: rgb(187, 255, 0);">
                         <div class="box">
                             <h3>Simulation workbench</h3>
@@ -98,14 +111,6 @@
                             <p>I have been using Sentaurus Workbench (SWB) for TCAD simulations. I found that the workflow managed 
                                 by the SWB is convenient in some sense but cumbersome in many situations. So I want to develop 
                                 my own tool to manage the simulation projects.
-                            </p>
-                            <p>Click for detail.</p>
-                        </div>
-                    </a>
-                    <a href="https://algorithmx.github.io/PythonConsole.html" style="text-decoration: none; color: rgb(187, 255, 0);">
-                        <div class="box">
-                            <h3>Python console</h3>
-                            <p>A simple Python console running entirely within the browser.
                             </p>
                             <p>Click for detail.</p>
                         </div>
