--- a/PythonConsole.html
+++ b/PythonConsole.html
@@ -1,1 +1,16 @@
-<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Python Console</title><script defer="defer" src="/static/js/main.d4c48e0b.js"></script><link href="/static/css/main.fef748d2.css" rel="stylesheet"></head><body><div id="root"></div></body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Python Console</title>
+    <script defer="defer" src="/static/js/main.d4c48e0b.js"></script>
+    <link href="/static/css/main.fef748d2.css" rel="stylesheet" />
+  </head>
+  <body>
+    <div id="header"><span>
+        <a href="https://github.com/algorithmx/PythonConsole">GitHub Repo</a>
+    </span></div>
+    <div id="root"></div>
+  </body>
+</html>
