--- a/PythonConsole.html
+++ b/PythonConsole.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Python Console</title>
-    <script defer="defer" src="/static/js/main.d4c48e0b.js"></script>
-    <link href="/static/css/main.fef748d2.css" rel="stylesheet" />
-  </head>
-  <body>
-    <div id="header"><span>
-        <a href="https://github.com/algorithmx/PythonConsole">GitHub Repo</a>
-    </span></div>
-    <div id="root"></div>
-  </body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1"><script src="https://cdn.plot.ly/plotly-2.35.2.min.js" charset="utf-8"></script><script>function resizeIframe(e){const n=e.contentWindow.document,t=n.documentElement.scrollHeight,o=n.body.innerHTML.trim();e.style.height=o?t+"px":"0px"}</script><title>Python Console</title><script defer="defer" src="/static/js/main.ff30ea49.js"></script><link href="/static/css/main.ceef243a.css" rel="stylesheet"></head><body><div id="root"></div><div id="figure-area"><iframe id="injected-plotly-html" onload="resizeIframe(this)"></iframe></div></body></html>
