--- a/posts.html
+++ b/posts.html
@@ -38,12 +38,19 @@
             padding-inline-start: 0px;
         }
         .box {
+            font-size: medium;
             border: 1px solid white;
             padding: 8px;
             margin: 8px 0;
             cursor: pointer;
             text-align: justify;
             transition: background-color 0.3s;
+        }
+        .box code {
+            font-size: medium;
+            background-color: rgba(31, 57, 32, 0.1);
+            padding: none;
+            margin: none;
         }
         .box:hover {
             background-color: rgba(255, 255, 255, 0.1);
