--- a/posts.html
+++ b/posts.html
@@ -102,6 +102,11 @@
     </style>
 </head>
 <body>
+    <div id="loading-overlay" style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0, 0, 0, 0.5); z-index: 1000; justify-content: center; align-items: center;">
+        <div style="background: rgba(255, 255, 255, 0.8); padding: 20px; border-radius: 10px; color: black;">
+            <p>Loading...</p>
+        </div>
+    </div>
     <div id="go-back-button" class="markdown-header"></div>
     <div id="content" class="markdown-body">
     </div>
