collecting external posts

--- a/posts.html
+++ b/posts.html
@@ -99,6 +99,29 @@
         .markdown-body a {
             color: lightgreen;
         }
+        .section-title, .post-title {
+            cursor: pointer;
+            background-color: black;
+            padding: 10px;
+            border-radius: 5px;
+            margin-bottom: 10px;
+        }
+        .section-container {
+            font-size: large;
+            background-color: black;
+            margin-bottom: 20px;
+        }
+        
+        .posts-container {
+            background-color: black;
+            padding: 10px;
+            border: 1px solid white;
+            border-radius: 5px;
+            margin-top: 10px;
+        }
+        .section-container.expanded .posts-container {
+            display: block;
+        }
     </style>
 </head>
 <body>
