--- a/index.html
+++ b/index.html
@@ -89,6 +89,18 @@
                     <h1>Active Projects</h1>
                     <p>Here is a list of projects I am currently working on.</p>
 
+                    <a href="stock-price-viewer.html" 
+                        style="text-decoration: none; color: rgb(70, 146, 252);">
+                        <div class="box">
+                            <h3>Stock price viewer</h3>
+                            <p>A React component for candlestick diagram of stock price data. 
+                                Still in progress. GitHub repository is 
+                                <a href="https://github.com/algorithmx/stock-price-viewer" style="text-decoration: none; color: rgb(0, 225, 255);">available here</a>.
+                            </p>
+                            <p>Click to view the demo.</p>
+                        </div>
+                    </a>
+
                     <a href="PythonConsole.html" 
                         style="text-decoration: none; color: rgb(0, 255, 98);">
                         <div class="box">
