--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                                 Still in progress. GitHub repository is 
                                 <a href="https://github.com/algorithmx/stock-price-viewer" style="text-decoration: none; color: rgb(0, 225, 255);">available here</a>.
                             </p>
-                            <p>Click to view the demo.</p>
+                            <p style="text-decoration: none; color: rgb(70, 146, 252);">Click to view the demo.</p>
                         </div>
                     </a>
 
