--- a/publications.html
+++ b/publications.html
@@ -6,83 +6,40 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-    <title>Yunlong's Site</title>
-    <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            background-color: black;
-            color: white;
-            font-family: "Noto Serif", serif;
-            font-style: normal;
-        }
-        .container {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-            padding: 8px 0;
-        }
-        .content {
-            background-color: rgba(0, 0, 0, 0.7);
-            padding: 8px;
-            max-width: 800px;
-            width: 90%;
-            box-shadow: 0 0 10px rgba(255, 255, 255, 0.1);
-        }
-        .box {
-            border: 1px solid white;
-            padding: 8px;
-            margin: 8px 0;
-            cursor: pointer;
-            text-align: justify;
-            transition: background-color 0.3s;
-        }
-        .box:hover {
-            background-color: rgba(255, 255, 255, 0.1);
-        }
-    </style>
+    <title>Publications</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
         <div class="content">
-            <a style="text-decoration: none; color: inherit;">
+            <h2>Publications</h2>
+            <a href="https://theses.hal.science/tel-01894003/" style="text-decoration: none; color: rgb(205, 239, 141);">
                 <div class="box">
-                    <a style="text-decoration: none; color: white;">
-                        <div class="box">
-                            <h2>Publications</h2>
-                        </div>
-                    </a>
-                    <a href="https://theses.hal.science/tel-01894003/" style="text-decoration: none; color: rgb(205, 239, 141);">
-                        <div class="box">
-                            <p>Skyrmions in quantum Hall systems (PhD thesis)</p>
-                            <p>Yunlong Lian</p>
-                        </div>
-                    </a>
-                    <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.117.056806" style="text-decoration: none; color: rgb(141, 239, 223);">
-                        <div class="box">
-                            <p>SU(4) Skyrmions in the v=±1 Quantum Hall State of Graphene</p>
-                            <p>Y. Lian, A. Rosch, and M.-O. Goerbig</p>
-                            <p>Phys. Rev. Lett. 117, 056806 - Published 29 July 2016</p>
-                        </div>
-                    </a>
-                    <a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.95.245428" style="text-decoration: none; color: rgb(126, 230, 117);">
-                        <div class="box">
-                            <p>Spin-valley skyrmions in graphene at filling factor v=-1</p>
-                            <p>Yunlong Lian and Mark O. Goerbig</p>
-                            <p>Phys. Rev. B 95, 245428 - Published 26 June 2017</p>
-                        </div>
-                    </a>
-                    <a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.103.035403" style="text-decoration: none; color: rgb(200, 133, 238);">
-                        <div class="box">
-                            <p>Skyrmion zoo in graphene at charge neutrality in a strong magnetic field</p>
-                            <p>Jonathan Atteia, Yunlong Lian, and Mark Oliver Goerbig</p>
-                            <p>Phys. Rev. B 103, 035403 - Published 6 January 2021</p>
-                        </div>
-                    </a>
+                    <p>Skyrmions in quantum Hall systems (PhD thesis)</p>
+                    <p>Yunlong Lian</p>
                 </div>
             </a>
-
+            <a href="https://journals.aps.org/prl/abstract/10.1103/PhysRevLett.117.056806" style="text-decoration: none; color: rgb(141, 239, 223);">
+                <div class="box">
+                    <p>SU(4) Skyrmions in the v=±1 Quantum Hall State of Graphene</p>
+                    <p>Y. Lian, A. Rosch, and M.-O. Goerbig</p>
+                    <p>Phys. Rev. Lett. 117, 056806 - Published 29 July 2016</p>
+                </div>
+            </a>
+            <a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.95.245428" style="text-decoration: none; color: rgb(126, 230, 117);">
+                <div class="box">
+                    <p>Spin-valley skyrmions in graphene at filling factor v=-1</p>
+                    <p>Yunlong Lian and Mark O. Goerbig</p>
+                    <p>Phys. Rev. B 95, 245428 - Published 26 June 2017</p>
+                </div>
+            </a>
+            <a href="https://journals.aps.org/prb/abstract/10.1103/PhysRevB.103.035403" style="text-decoration: none; color: rgb(200, 133, 238);">
+                <div class="box">
+                    <p>Skyrmion zoo in graphene at charge neutrality in a strong magnetic field</p>
+                    <p>Jonathan Atteia, Yunlong Lian, and Mark Oliver Goerbig</p>
+                    <p>Phys. Rev. B 103, 035403 - Published 6 January 2021</p>
+                </div>
+            </a>
         </div>
     </div>
 </body>
